# hackathon

./: README.md  got_ocr.py  output.txt  pyproject.toml  qwen.py
