[tool.poetry]
name = "ocr-reader"
version = "0.1.0"
description = "This is a project for UK ESSEN. We want to improve clinical workflows through AI solutions."
authors = ["y"]
license = "apache"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.10.x"
transformers = "^4.45.2"
torch = "^2.3.1"
torchvision = "^0.19.1"
pandas = "^2.2.3"
tiktoken = "^0.8.0"
verovio = "^4.3.1"
accelerate = "^1.0.1"
qwen-vl-utils = "^0.0.8"
autoawq ="0.2.x"
flash-attn="2.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
